Доработан основной функционал AuthorFacadeImplБ отправку уведомлений в телеграм канал